--- a/RestaurantMVVM+Xib/RestaurantListModule/View/RestaurantTableViewCell.xib
+++ b/RestaurantMVVM+Xib/RestaurantListModule/View/RestaurantTableViewCell.xib
@@ -12,35 +12,38 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="131" id="KGk-i7-Jjw" customClass="RestaurantTableViewCell" customModule="RestaurantMVVM_Xib" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="344" height="172"/>
+            <rect key="frame" x="0.0" y="0.0" width="390" height="172"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="344" height="172"/>
+                <rect key="frame" x="0.0" y="0.0" width="390" height="172"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="clP-MP-dgY">
-                        <rect key="frame" x="4" y="8" width="336" height="156"/>
+                        <rect key="frame" x="24" y="8" width="342" height="147.66666666666666"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="restaurant" translatesAutoresizingMaskIntoConstraints="NO" id="EF1-xi-B8m">
-                                <rect key="frame" x="12" y="12" width="132" height="132"/>
+                                <rect key="frame" x="12.000000000000007" y="12.000000000000007" width="123.66666666666669" height="123.66666666666669"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="EF1-xi-B8m" secondAttribute="height" id="5xv-jE-U6B"/>
                                 </constraints>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="BMI-xU-pxU">
-                                <rect key="frame" x="160" y="16" width="160" height="124"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="BMI-xU-pxU">
+                                <rect key="frame" x="151.66666666666663" y="16.000000000000007" width="174.33333333333337" height="115.66666666666669"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="To7-4u-HkU">
-                                        <rect key="frame" x="0.0" y="0.0" width="160" height="52"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="To7-4u-HkU">
+                                        <rect key="frame" x="0.0" y="0.0" width="174.33333333333334" height="48"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ABC Restaurant" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dIu-My-YRp">
                                                 <rect key="frame" x="0.0" y="0.0" width="145.66666666666666" height="28"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="28" id="ftz-yt-DFZ"/>
+                                                </constraints>
                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="V28-Ra-m8H">
-                                                <rect key="frame" x="0.0" y="36" width="75" height="16"/>
+                                                <rect key="frame" x="0.0" y="32" width="75" height="16"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="iiS-dW-3RX">
                                                         <rect key="frame" x="0.0" y="-0.33333333333333215" width="15" height="14.666666666666666"/>
@@ -94,39 +97,44 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="KH9-Y4-Lt7">
-                                        <rect key="frame" x="0.0" y="72" width="160" height="52"/>
+                                        <rect key="frame" x="0.0" y="60" width="174.33333333333334" height="55.666666666666657"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fZX-qe-fq2">
                                                 <rect key="frame" x="0.0" y="0.0" width="120" height="20"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recommended" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KWr-PS-UU8">
-                                                        <rect key="frame" x="0.0" y="0.0" width="120" height="20"/>
+                                                        <rect key="frame" x="4" y="0.0" width="112" height="20"/>
                                                         <color key="backgroundColor" red="0.72999999999999998" green="0.75" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" red="0.72999999999999998" green="0.75" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="20" id="Ij7-pB-Rj7"/>
-                                                    <constraint firstItem="KWr-PS-UU8" firstAttribute="leading" secondItem="fZX-qe-fq2" secondAttribute="leading" id="Ijf-tQ-tcR"/>
+                                                    <constraint firstItem="KWr-PS-UU8" firstAttribute="leading" secondItem="fZX-qe-fq2" secondAttribute="leading" constant="4" id="Ijf-tQ-tcR"/>
                                                     <constraint firstItem="KWr-PS-UU8" firstAttribute="top" secondItem="fZX-qe-fq2" secondAttribute="top" id="SoK-4s-yh4"/>
                                                     <constraint firstAttribute="bottom" secondItem="KWr-PS-UU8" secondAttribute="bottom" id="TQM-It-Bqr"/>
-                                                    <constraint firstAttribute="trailing" secondItem="KWr-PS-UU8" secondAttribute="trailing" id="cOj-HJ-vSb"/>
+                                                    <constraint firstAttribute="trailing" secondItem="KWr-PS-UU8" secondAttribute="trailing" constant="4" id="cOj-HJ-vSb"/>
                                                 </constraints>
                                             </view>
-                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="gS3-5t-J7b">
-                                                <rect key="frame" x="0.0" y="30" width="48.666666666666664" height="22"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="gS3-5t-J7b">
+                                                <rect key="frame" x="0.0" y="30" width="54" height="25.666666666666671"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="P1M-Jw-DkZ">
-                                                        <rect key="frame" x="0.0" y="1.9999999999999982" width="20.333333333333332" height="18.666666666666664"/>
+                                                        <rect key="frame" x="0.0" y="-2.3333333333333357" width="25.666666666666668" height="31.000000000000004"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <color key="tintColor" systemColor="opaqueSeparatorColor"/>
-                                                        <imageReference key="image" image="person.fill" catalog="system" symbolScale="medium"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="25" id="73s-dV-zWl"/>
+                                                            <constraint firstAttribute="width" secondItem="P1M-Jw-DkZ" secondAttribute="height" id="wdh-u7-DXV"/>
+                                                        </constraints>
+                                                        <imageReference key="image" image="bitcoinsign.circle.fill" catalog="system" symbolScale="large"/>
+                                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
                                                     </imageView>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="28" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G7B-0p-VTZ">
-                                                        <rect key="frame" x="28.333333333333343" y="0.0" width="20.333333333333329" height="22"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="28" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G7B-0p-VTZ">
+                                                        <rect key="frame" x="33.666666666666686" y="0.0" width="20.333333333333329" height="25.666666666666668"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -151,8 +159,8 @@
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="clP-MP-dgY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="4" id="6Pt-oM-b0d"/>
-                    <constraint firstAttribute="trailing" secondItem="clP-MP-dgY" secondAttribute="trailing" constant="4" id="bFT-7b-Nnt"/>
+                    <constraint firstItem="clP-MP-dgY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="24" id="6Pt-oM-b0d"/>
+                    <constraint firstAttribute="trailing" secondItem="clP-MP-dgY" secondAttribute="trailing" constant="24" id="bFT-7b-Nnt"/>
                     <constraint firstItem="clP-MP-dgY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="eo9-LE-fCi"/>
                     <constraint firstAttribute="bottom" secondItem="clP-MP-dgY" secondAttribute="bottom" constant="8" id="x2f-cP-eQ2"/>
                 </constraints>
@@ -165,18 +173,15 @@
                 <outlet property="recommendedContainerView" destination="fZX-qe-fq2" id="ahu-wE-krz"/>
                 <outlet property="restaurantImageView" destination="EF1-xi-B8m" id="UeD-Jx-6Ax"/>
             </connections>
-            <point key="canvasLocation" x="157.25190839694656" y="50"/>
+            <point key="canvasLocation" x="192.36641221374046" y="50"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="person.fill" catalog="system" width="128" height="120"/>
+        <image name="bitcoinsign.circle.fill" catalog="system" width="128" height="123"/>
         <image name="restaurant" width="100" height="100"/>
         <image name="star.fill" catalog="system" width="128" height="116"/>
         <systemColor name="opaqueSeparatorColor">
             <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
